side white space fixed

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ Navigation bar end
 
 .highlight p{
     margin-bottom: 24px;
-    width: 400px;
+    width: 100%;
 }
 
 .highlightImage img{
